Task 8 (SPEC): Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()
Both PersistableSessionManager and MultipleEndpointBackendService used
Class.newInstance(), deprecated since Java 9. It silently swallows checked
exceptions thrown by constructors and bypasses access checks.

Replace with getDeclaredConstructor().newInstance() and extend the catch blocks
to also cover NoSuchMethodException and InvocationTargetException.

Also add a BackendService.class.isAssignableFrom() guard before instantiation so
that passing a class that does not implement BackendService fails fast with a
clear IllegalArgumentException/LifecycleException rather than a ClassCastException
at the call site.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>